link to World Words

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <HTML>
-<HEAD>
-<TITLE>Sugri</TITLE>
-</HEAD>
-<BODY>
-    iOS-Developer.
-</BODY>
+    <HEAD>
+        <TITLE>Sugri</TITLE>
+    </HEAD>
+    <BODY>
+        iOS-Developer.
+        <p><a href="https://apps.apple.com/ru/app/world-words/id1670569128/">World Words</a></p>
+    </BODY>
 </HTML>
