--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </HEAD>
     <BODY>
         
-        <p><b>iOS-Developer.</b></p>
+        <p><b>iOS-Developer. Test</b></p>
         <p><a href="https://apps.apple.com/ru/app/world-words/id1670569128/">World Words</a>
         <p><a href="https://apps.apple.com/ru/app/my-qr/id1644582305/">My QR</a>
         <p><a href="https://apps.apple.com/ru/app/mafia-gang/id1638964730/">Mafia: Gang</a></p>
