--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </HEAD>
     <BODY>
         
-        <p><b>iOS-Developer. Test</b></p>
+        <p><b>iOS-Developer</b></p>
         <p><a href="https://apps.apple.com/ru/app/world-words/id1670569128/">World Words</a>
         <p><a href="https://apps.apple.com/ru/app/my-qr/id1644582305/">My QR</a>
         <p><a href="https://apps.apple.com/ru/app/mafia-gang/id1638964730/">Mafia: Gang</a></p>
@@ -26,10 +26,9 @@
 
         The app does use third party services that may collect information used to identify you.
 
-        Link to privacy policy of third party service providers used by the app
-
-        YandexAds
-        Google Analytics for Firebase
+        <p>Link to privacy policy of third party service providers used by the app</p>
+        <p><a href="https://yandex.ru/adv">YandexAds</a>
+        <p><a href="https://firebase.google.com/docs/analytics?hl=ru"> Google Firebase Analytics</a></p>
 
         We want to inform you that whenever you use our Service, in a case of an error in the app we collect data and information (through third party products) on your phone called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing our Service, the time and date of your use of the Service, and other statistics.
 
